@startuml
!define table(x) class x << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <i>x</i>

table(clubs) {
  primary_key(id) : INTEGER
  name : TEXT NOT NULL UNIQUE
  manager : TEXT NOT NULL
  location : TEXT NOT NULL
}

table(branches) {
  primary_key(id) : INTEGER
  foreign_key(club_id) : INTEGER NOT NULL
  name : TEXT NOT NULL
}

table(members) {
  primary_key(id) : INTEGER
  foreign_key(club_id) : INTEGER NOT NULL
  name : TEXT NOT NULL
  phone : TEXT
  number_of_children : INTEGER DEFAULT 0
}

table(sports) {
  primary_key(id) : INTEGER
  name : TEXT NOT NULL UNIQUE
  number_of_teams : INTEGER NOT NULL DEFAULT 0
}

table(club_sports) {
  primary_key(club_id) : INTEGER NOT NULL
  primary_key(sport_id) : INTEGER NOT NULL
}

clubs ||--o{ branches : "has"
clubs ||--o{ members : "has"
clubs ||--o{ club_sports : ""
sports ||--o{ club_sports : ""
@enduml